--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
             // Fayllar FormData'ga alohida qo'shiladi
             formdata.append("resposts", JSON.stringify([
-                { "bob": bob1, "type_work": type_work1, "files":file1},
-                { "bob": bob2, "type_work": type_work2, "files":file2}
+                { "bob": bob1, "type_work": type_work1},
+                { "bob": bob2, "type_work": type_work2}
             ]));
 
             const requestOptions = {
